fixed missing "..."
fixed missing "..." (on some browsers) when fish names were too long.

--- a/fish/style.css
+++ b/fish/style.css
@@ -298,24 +298,18 @@ a {
 }
 
 .namecontainer {
-    max-width: 100%;
+    max-width: calc(100% - 2.1em);
     max-height: 1.2em;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
     padding-right: 3px;
 }
 
 .namecontainer pre {
-    text-align: left;
-    max-height: 1.2em;
-    word-wrap: break-word;
+    width: 100%;
     white-space: nowrap;
-    overflow: hidden; /* Hides any content that overflows the div */
+    overflow: hidden;
+    display: inline-block;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1; /* Limit to 2 lines of text */
-    -webkit-box-orient: vertical; /* Set vertical orientation */
+    margin: 0;
 }
 
 .fishrowcontainer {
